--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </div>
 
   <div class="profile-card" id="mainProfile" style="display:none;">
-    <img src="LOGO.png" alt="Logo" class="logo">
+    <img src="logo.png" alt="Logo" class="logo">
     <h1>ZeRoX_ShadoW</h1>
     <div class="tagline">⚡ Master of Code | Shadow of the Net ⚡</div>
     <div class="section">
